<resources>
    <string name="app_name">Corona</string>
    <string name="image_capture_failed">Image capture failed</string>
    <string name="facebook_app_id">2819307854855632</string>

    <string name="body_temperature">درجة الحرارة</string>
    <string name="fb_login_protocol_scheme">fb2819307854855632</string>
    <string name="ee">الدخوا عن طريق جوجل</string>
    <string name="send">ارسال</string>
    <string name="heart_beat">ضربات القلب</string>
    <string name="weight">وزن</string>
    <string name="diagnose_button">إرسال</string>
    <string name="date_button">تحديد اليوم</string>
    <string name="date">تاريخ اليوم</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="gooogle_api_key">AIzaSyBkUC4wQsBe_cLAqUZxk9ekjQuQjhIKGcE</string>


    <string name="postTitle">اخر الاخبار</string>
    <string name="mapTitle">الخريطة</string>
    <string name="reportTitle">الابلاغ عن حالة مرض</string>
    <string name="videoTitle">فيديوهات</string>
    <string name="userVideoTitle">فيديوهات المستخدمين</string>
    <string name="viewtTitle">الحالة الصحية</string>
    <string name="santeTitle">الحالة الصحية</string>

    <string name="MapViewBundleKey">MapViewBundleKey</string>

    <string name="gpsPermissionMsg">يتطلب هذا التطبيق GPS للعمل بشكل صحيح ، هل تريد تمكينه؟</string>
    <string name="yes">نعم</string>

    <string name="checkGoogleServiceVersion">isServicesOK: checking google services version</string>
    <string name="checkGoogleServiceWorking">isServicesOK: Google Play Services is working</string>
    <string name="checkGoogleServiceError">isServicesOK: an error occured but we can fix it</string>
    <string name="errorMapRequest">You can\'t make map requests</string>

    <string name="danger_lvl1">لا يوجد خطر</string>
    <string name="danger_lvl2">خطر متوسط</string>
    <string name="danger_lvl3">خطير جدا</string>
    <string name="loginTitle">تسجيل الدخول</string>
    <string name="outMsg">تم الخروج بنجاح</string>
    <string name="inMsg">تم التسجيل بنجاح</string>
    <string name="GoogleID">Google ID</string>
    <string name="GoogleFirstName">Google First Name</string>
    <string name="GoogleLastName">Google Last Name</string>
    <string name="GoogleEmail">Google Email</string>
    <string name="GoogleProfilePicURL">Google Profile Pic URL</string>
    <string name="GoogleIDToken">Google ID Token</string>
    <string name="failedCode">failed code=</string>
    <string name="Countries">Countries</string>
    <string name="onActivityResultMsg">onActivityResult: called.</string>
    <string name="localMap">الخريطة المحلية</string>
    <string name="globalMap">الخريطة العالمية</string>
    <string name="errorMsg">Error</string>
    <string name="correctMsg">تم تحميل المحتوى</string>
    <string name="faildMsg">Failed!</string>
    <string name="loginMsg">يرجى تسجيل الدخول</string>
    <string name="reMsg">اعد المحاولة</string>
    <string name="postPackage">com.example.corona.ui.post</string>
    <string name="dangerMsg">حذار لقد دخلت منطقة خطرة عليك توخ الحذر</string>
    <string name="danger">تنبيه</string>
    <string name="PermissionDeniedMsg">Permission denied</string>
    <string name="settingsEnableMsg">Go to settings and enable the permission</string>


</resources>
