<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/mapTitle"/>
        <item
            android:id="@+id/nav_public"
            android:icon="@drawable/ic_warning"
            android:title="@string/reportTitle"/>
        <item
            android:id="@+id/nav_warnings"
            android:icon="@drawable/ic_public"
            android:title="@string/postTitle"/>

        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_video"
            android:title="@string/videoTitle"/>
        <item
        android:id="@+id/nav_view"
        android:icon="@drawable/ic_today"
        android:title="@string/userVideoTitle"/>

        <item
            android:id="@+id/nav_sante"
            android:icon="@drawable/ic_today"
            android:title="@string/santeTitle"/>
    </group>



</menu>
